--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -28,7 +28,6 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
       procps \
       python3.12 \
       default-mysql-client \
-      postgresql-client-16 \
       redis-tools
 
 # ロケール設定
@@ -79,6 +78,13 @@ RUN curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases
 RUN wget https://github.com/alexei-led/spotinfo/releases/download/1.0.7/spotinfo_linux_amd64 && \
     chmod 755 spotinfo_linux_amd64 && \
     mv spotinfo_linux_amd64 /usr/local/bin/spotinfo
+
+# PostgreSQL インストール
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt/lists,sharing=locked \
+    apt update && apt install -y postgresql-common && \
+    yes | /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh && \
+    apt update && apt install -y postgresql-client-18
 
 # rabbitmqadmin インストール
 RUN wget -O /usr/local/bin/rabbitmqadmin https://github.com/rabbitmq/rabbitmqadmin-ng/releases/download/v2.9.0/rabbitmqadmin-2.9.0-x86_64-unknown-linux-gnu && \
